# leptos_todo_app_surrealdb

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  index.html
src/: error_template.rs  errors.rs  lib.rs  main.rs  todo.rs
